[CF] change single boss generation